--- a/estilos.css
+++ b/estilos.css
@@ -317,6 +317,100 @@ main span{
      color: yellow;
  }
 
+ @media only screen and (max-width: 1200px) { 
+    .feature-cont{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+    .feature1{
+        grid-row:1/2;
+        grid-column: 1/2;
+    }
+    .feature2{
+        grid-column: 2/3;
+        grid-row: 1/3 ;
+    }
+ }
+
+ @media only screen and (max-width: 690px) { 
+    .feature-cont{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+    .feature1{
+        grid-column: 1/3;
+        grid-row:1/2;
+    }
+    .feature2{
+        grid-column: 1/3;
+        grid-row: 2/3 ;
+    }
+    .feature3{
+        grid-column: 1/2;
+        grid-row: 3/4;
+        
+    }
+    .feature4{
+        grid-column: 2/3;
+        grid-row: 3/4;
+        
+    }
+    .feature5{
+        grid-column: 1/3;
+        grid-row: 4/5;
+    }
+    .feature6{
+        grid-column: 1/3; 
+        grid-row: 5/6;
+    }
+    .feature7{
+        grid-column: 1/2;
+        grid-row: 6/7;
+    }
+    .feature8{
+        grid-column: 2/3;
+        grid-row: 6/7;
+    }
+
+    .feature9{
+        grid-column: 1/3;
+        grid-row: 7/8;
+    }
+
+    .feature10{
+        grid-column: 1/2;
+        grid-row: 8/9;
+    }
+    .feature11{
+        grid-column: 2/3;
+        grid-row: 8/9 ;
+    }
+ }
+@media only screen and (max-width:460px) {
+    .feature-cont{
+        grid-template-columns: 1fr;
+        /* grid-template-rows: repeat(11, 1fr); */
+        font-size: 1rem;
+    }
+    .feature{
+        grid-column: 1/2;
+        grid-row: auto;
+    }
+    .feature2{
+        grid-row: 9;
+        min-height: 400px;
+    }
+    .feature6{
+        grid-row: 10;
+    }
+    .feature9{
+        grid-row: 11/13;
+        min-height: 300px;
+    
+    }
+}
 
 /* caracteristicas - fin */
 
@@ -763,7 +857,7 @@ h3{
 
 ::-webkit-scrollbar 
 {
-	width: 12px;
+	width: 10px;
 	background-color: #000;
 }
 
