--- a/blog.css
+++ b/blog.css
@@ -19,10 +19,22 @@
     background-repeat: no-repeat;
     width: 100%;
     height: 100vh;
+    position: relative;
+}
+
+.fondo{
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 4;
 }
 
 h1{
     text-align: center;
     font-family: 'Permanent Marker', cursive;
     font-size: 70px;
+    z-index: 5;
 }
